Revert "Update install"
This reverts commit 45c4585a4cabc61f9a3a887c0663a625b181019c.

--- a/scripts/install
+++ b/scripts/install
@@ -42,10 +42,10 @@ yunohost service add $app --description="A short description of the app" --log="
 #=================================================
 ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-ynh_add_config --template="../conf/database.json" --destination="$data_dir/database.json"
+ynh_add_config --template="../conf/database.json" --destination="$install_dir/database.json"
 
-chmod 650 "$data_dir/database.json"
-chown $app:$app "$data_dir/database.json"
+chmod 400 "$install_dir/database.json"
+chown $app:$app "$install_dir/database.json"
 
 #=================================================
 # GENERIC FINALIZATION
