--- a/scripts/install
+++ b/scripts/install
@@ -40,12 +40,12 @@ yunohost service add $app --description="A short description of the app" --log="
 #=================================================
 # ADD A CONFIGURATION
 #=================================================
-#ynh_script_progression --message="Adding a configuration file..." --weight=1
+ynh_script_progression --message="Adding a configuration file..." --weight=1
 
-#ynh_add_config --template="../conf/database.json" --destination="$install_dir/database.json"
+ynh_add_config --template="../conf/database.json" --destination="$install_dir/database.json"
 
-#chmod 400 "$install_dir/database.json"
-#chown $app:$app "$install_dir/database.json"
+chmod 400 "$install_dir/database.json"
+chown $app:$app "$install_dir/database.json"
 
 #=================================================
 # GENERIC FINALIZATION
